<resources>
    <string name="app_name">Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="informe_todos_camspo">Informe todos os campos</string>
    <string name="erro_inesperado">Erro inesperado</string>
    <string name="email_em_uso">Email já em uso. Informe outro por favor !!</string>
    <string name="entrar">Entrar</string>
    <string name="user_password_incorret">Usuário e/ou senha incorretos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Descrição</string>
    <string name="insert_task_sucess">Tarefa inserida com sucesso !!</string>
    <string name="update_task_sucess">Tarefa alterada com sucesso !!</string>
    <string name="delete_task">Tarefa removida com sucesso</string>
    <string name="title_delete_task">Remoção da tarefa</string>
    <string name="adicionar_tarefa">Adicionar Tarefa</string>
    <string name="atualizar_task">Atualizar tarefa</string>
    <string name="text_priority">Prioridade</string>
</resources>
